Multiselect Fix: moving selected option to top in all multiselect dropdowns

--- a/UI/src/app/dashboardv2/filter-v2/primary-filter/primary-filter.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/primary-filter/primary-filter.component.html
@@ -3,7 +3,8 @@
         <p-multiSelect #multiSelect inputId="multiselectFilter" [options]="filters" [(ngModel)]="selectedFilters"
             optionLabel="nodeName" [style]="{'width':'300px', 'max-width': '100%', 'height': '40px'}"
             [selectionLimit]="6" [selectedItemsLabel]="'{0} selected'" defaultLabel="Select"
-            [panelStyle]="{ 'min-width': 'min(100vw, 300px)' }" [appendTo]="filterDiv" [resetFilterOnHide]="true">
+            [panelStyle]="{ 'min-width': 'min(100vw, 300px)' }" [appendTo]="filterDiv" [resetFilterOnHide]="true"
+            (onChange)="moveSelectedOptionToTop($event)">
             <ng-template let-option pTemplate="item">
                 <div class="filter-item">
                     <div>
