--- a/UI/src/app/config/profile/auto-approval/auto-approval.component.html
+++ b/UI/src/app/config/profile/auto-approval/auto-approval.component.html
@@ -2,7 +2,7 @@
 <div class="content">
     <form [formGroup]="autoApprovalForm">
         <div class="p-xl-12 p-mb-4">
-            <span class="p-mr-5">Auto Approval</span>
+            <span class="p-mr-5">Auto Approve</span>
             <p-inputSwitch formControlName="enableAutoApprove" (onChange)="handleChange($event)">
             </p-inputSwitch>
         </div>
