--- a/UI/src/app/config/profile/profile.component.html
+++ b/UI/src/app/config/profile/profile.component.html
@@ -49,7 +49,7 @@
         <div class="p-component p-panelmenu-header">
           <a class="p-panelmenu-header-link p-align-center" routerLink="AccessMgmt" *ngIf="isSuperAdmin" routerLinkActive="selected">
             <i class="fa fa-universal-access p-menuitem-icon" aria-hidden="true"></i>
-            Access Mgmt.
+            Manage Access
           </a>
         </div>
       </div>
@@ -86,7 +86,7 @@
           <a class="p-panelmenu-header-link p-align-center" routerLink="AutoApprove" *ngIf="isSuperAdmin"
             routerLinkActive="selected">
             <i class="fas fa-check-circle p-menuitem-icon" aria-hidden="true"></i>
-            Auto Approval
+            Auto Approve
           </a>
         </div>
       </div>
