--- a/UI/src/app/dashboardv2/kpi-card-v2/kpi-card-v2.component.html
+++ b/UI/src/app/dashboardv2/kpi-card-v2/kpi-card-v2.component.html
@@ -98,7 +98,7 @@
     </div>
   </div>
   <div class="kpi-card-footer p-pr-5 p-pl-5">
-    <app-trend-indicator-v2 *ngIf="trendValueList && trendValueList.length > 0 && kpiData?.kpiDetail?.isAdditionalFilterSupport" [trendData]="trendData"
+    <app-trend-indicator-v2 *ngIf="trendValueList && trendValueList.length > 0 " [trendData]="trendData"
       [colorObj]="trendBoxColorObj">
     </app-trend-indicator-v2>
   </div>
