DTS-38039: Show only the active sprint in Iteration dashboard

--- a/UI/src/app/dashboard/iteration/iteration.component.html
+++ b/UI/src/app/dashboard/iteration/iteration.component.html
@@ -503,7 +503,7 @@
   </ng-container>
   <ng-template #noSprintsTemplate>
     <div class="p-d-flex p-align-center p-justify-center no-sprint-msg">
-      <h2 class="msg">The selected project need to have atleast one sprint available for the KPI's to show up</h2>
+      <h2 class="msg">The selected project need to have atleast one ACTIVE sprint available for the KPI's to show up</h2>
     </div>
   </ng-template>
   <ng-template #noProjectsTemplate>
