--- a/UI/src/app/dashboardv2/filter-v2/filter-new.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/filter-new.component.html
@@ -24,7 +24,7 @@
     </ng-container>
   </div>
 </div>
-<div class="selected-filter-container p-d-flex p-jc-between p-pl-3 p-pr-3">
+<div class="selected-filter-container p-d-flex p-jc-between p-pl-3 p-pr-3" *ngIf="!noSprint">
   <ul class="p-m-0 p-pl-0 p-d-flex p-flex-wrap">
     <ng-container *ngIf="getObjectKeys(colorObj).length">
       <ng-container *ngFor="let item of getObjectKeys(colorObj); let i = index;">
