--- a/UI/src/app/config/project-config/basic-config/basic-config.component.html
+++ b/UI/src/app/config/project-config/basic-config/basic-config.component.html
@@ -137,7 +137,7 @@
             <p-steps [model]="steps" [readonly]="false"></p-steps>
           </div>
           <div class="p-d-flex p-jc-center p-pb-3">
-            <label><a routerLink="/dashboard/Config/connection-list">Continue to Tool connections</a></label>
+            <label><a [routerLink]="['/dashboard/Config/ConfigSettings/'+ selectedProject?.id]" [queryParams]="{tab: 1}" >Continue to Tool Connections</a></label>
           </div>
 
           <div class="p-d-flex p-jc-center p-pb-3">
