DTS-38567: Log Management | As a user I can access the data fetch errors

--- a/UI/src/app/config/advanced-settings/advanced-settings.component.html
+++ b/UI/src/app/config/advanced-settings/advanced-settings.component.html
@@ -70,6 +70,7 @@
           <ng-template pTemplate="header">
             <tr>
               <th id="processorName">Processor Name</th>
+              <th id="connectionName">Connection Name</th>
               <th id="executionTime">Last Executed On</th>
               <th></th>
               <th id="state">Status</th>
@@ -83,10 +84,15 @@
               </td>
 
               <td class='custom-table-cell'>
+                {{  processor.connectionName }}
+              </td>
+              <td class='custom-table-cell'>
                 <span
                   *ngIf="(!findTraceLogForTool(processor.toolName)?.executionOngoing && processor.toolName === 'Jira') || processor.toolName !== 'Jira'">{{
                   showExecutionDate(processor.toolName) }}</span>
               </td>
+
+
               <td class="custom-table-cell">
                 <p-progressBar mode="indeterminate"
                   *ngIf="processor.toolName === 'Jira' && findTraceLogForTool(processor.toolName)?.executionOngoing === true "
