--- a/UI/src/app/shared-module/field-mapping-form/field-mapping-form.component.html
+++ b/UI/src/app/shared-module/field-mapping-form/field-mapping-form.component.html
@@ -81,7 +81,7 @@
 </form>
 <div class="save-container p-mt-5 p-mb-1">
     <button pButton pRipple type="button" class="p-button-lg p-button-success p-button-raised p-mr-3" icon="pi pi-save"
-        iconPos="left" label="Save" (click)="save()" [disabled]="disableSave || form.invalid || !isFormDirty"></button>
+        iconPos="left" label="Save" (click)="save()" [disabled]=" form.invalid || !form.dirty"></button>
 </div>
 
 <!-- Search Dialog -->
