Add a Go to Top icon

--- a/UI/src/app/dashboardv2/dashboard-v2/dashboard-v2.component.html
+++ b/UI/src/app/dashboardv2/dashboard-v2/dashboard-v2.component.html
@@ -36,4 +36,7 @@
         </div>
     </div>
 </div>
+<button id="go-to-top" title="Go to Top">
+    <i class="fa fa-arrow-up" aria-hidden="true"></i>
+  </button>
 <app-footer></app-footer>
