--- a/UI/src/app/dashboardv2/filter-v2/filter-new.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/filter-new.component.html
@@ -125,7 +125,7 @@
       </p-multiSelect>
     </div>
 
-    <div class="date-filter-container" *ngIf="kanban || selectedTab?.toLowerCase() === 'developer'">
+    <div class="date-filter-container cursor-pointer" *ngIf="kanban || selectedTab?.toLowerCase() === 'developer'">
       <!-- Date filter start -->
       <div class="position-relative">
         <div class="p-d-flex p-align-center p-p-2 rounded p-ml-2 date-filter-btn" #dateToggleButton
